--- a/teaspoonProject/src/sql/driver/driver.properties
+++ b/teaspoonProject/src/sql/driver/driver.properties
@@ -3,6 +3,6 @@
 driver=oracle.jdbc.driver.OracleDriver
 #oracle>>>ojdbc6.jar_WebContent/WEB-INF/lib
 url=jdbc:oracle:thin:@127.0.0.1:1521:XE
-username=server
-password=server
+username=TEASPOON
+password=TEASPOON
 
