views/controller_store부분 파일추가 및 수정_하정
store>controller>productEnrollServlet,productInsertServlet,productListServlet추가
store>model>vo>Product컬럼에 맞게 수정
views>admin>admin_store,admin_storeEnrollForm 변경된 컬럼에 맞게 css수정함
admin_sidebar 서블릿 경로수정

--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -1,18 +1,7 @@
-#coffeeListView
-selectCoffeeList=SELECT PCODE, PNAME, CHAGE_NAME FROM PRODUCT P JOIN ATTACHMENT ON (REF_BNO=PCODE) WHERE KIND=1 AND P.STATUS='Y' AND FILE_LEVEL=1 ORDER BY PCODE DESC
-
-#coffeeDetailView
-selectCoffee=SELECT PCODE, PNAME, KEYWORD, PRICE, CONTENT, CHANGE_NAME ~~
-
-#storeBest
-
-
-
-#itemListView
-
-
-
-#itemDetailView
-
+#ProductInsert
+#---> pname, supPrice, price, stock, keyword, kind, pcontent
+insertProduct=INSERT INTO PRODUCT VALUES(SEQ_PNO.NEXTVAL,?,?,?,?,DEFAULT,?,DEFAULT,?,?)
+#---> origin_name, change_name, file_path, file_level
+insertAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_PNO.CURRVAL, ?,?,?,SYSDATE,?,DEFAULT,80)
 
 
