--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -3,5 +3,7 @@
 insertProduct=INSERT INTO PRODUCT VALUES(SEQ_PNO.NEXTVAL,?,?,?,?,DEFAULT,?,DEFAULT,?,?)
 #---> origin_name, change_name, file_path, file_level
 insertAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_PNO.CURRVAL, ?,?,?,SYSDATE,?,DEFAULT,80)
-
+#--> 
+selectProductList=SELECT * FROM PRODUCT
+selectThumbnailList=SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT P JOIN ATTACHMENT A ON(PCODE=REF_BNO) WHERE BOARD_LEVEL=80 AND FILE_LEVEL=1 ORDER BY FILE_NO DESC
 
