--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -4,6 +4,7 @@ insertProduct=INSERT INTO PRODUCT VALUES(SEQ_PNO.NEXTVAL,?,?,?,?,DEFAULT,?,DEFAU
 #---> origin_name, change_name, file_path, file_level
 insertAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_PNO.CURRVAL, ?,?,?,SYSDATE,?,DEFAULT,80)
 #--> 
-selectProductList=SELECT * FROM PRODUCT
+selectProductList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT FROM PRODUCT ORDER BY PCODE DESC) A) WHERE RNUM BETWEEN ? AND ?
 selectThumbnailList=SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT P JOIN ATTACHMENT A ON(PCODE=REF_BNO) WHERE BOARD_LEVEL=80 AND FILE_LEVEL=1 ORDER BY FILE_NO DESC
 
+getListCount1=SELECT COUNT(*) FROM PRODUCT
