--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -4,4 +4,7 @@ loginMember=SELECT * FROM MEMBER WHERE USER_ID = ? AND USER_PWD= ? AND STATUS='Y
 getListCount=SELECT COUNT(*) FROM MEMBER
 selectList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,USER_NAME,PHONE,BIRTHDAY,GRADE_NAME,ENROLL_DATE,STATUS FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) ORDER BY ENROLL_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
 
+getSearchListCount=SELECT COUNT(*) FROM MEMBER WHERE USER_ID LIKE ?
+selectIdList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,USER_NAME,PHONE,BIRTHDAY,GRADE_NAME,ENROLL_DATE,STATUS FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE USER_ID LIKE ? ORDER BY ENROLL_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
+
 selectMyQnaList=SELECT USER_NO,MTM_TYPE,MTM_TITLE,CREATE_DATE, FROM MEMBER JOIN MEN_TO_MEN USING (USER_NO)
