--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -3,8 +3,7 @@ insertProduct=INSERT INTO PRODUCT VALUES(SEQ_PNO.NEXTVAL,?,?,?,?,DEFAULT,?,DEFAU
 insertAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_PNO.CURRVAL, ?,?,?,SYSDATE,?,DEFAULT,80)
 
 #productUpdate
-selectProduct=SELECT * FROM PRODUCT WHERE PCODE=?
-selectAttachment=FILE_NO, ORIGIN_NAME, CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=?
+#selectProductUpdate=SELECT *  FROM PRODUCT P JOIN ATTACHMENT A ON(PCODE=REF_BNO) WHERE BOARD_LEVEL=80 AND FILE_LEVEL=1 ORDER BY TOTAL_COUNT DESC
 #updateProduct=UPDAETE PRODUCT SET PNAME=?, SUP_PRICE=?, PRICE=?, STOCK=?, KEYWORD=?, CHECKED=?, PCONTENT=? WHERE PCODE=?
 #updateAttachment=UPDATE ATTACHMENT SET CHANGENAME=?, ORIGIN_NAME=?, FILE_PATH=? WHERE FILE_NO=?
 #updateNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?,?,?,?, SYSDATE, ?,DEFAULT,80)
@@ -13,7 +12,7 @@ selectAttachment=FILE_NO, ORIGIN_NAME, CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO
 #coffeeSelect
 selectProductList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT FROM PRODUCT ORDER BY PCODE DESC) A) WHERE RNUM BETWEEN ? AND ?
 selectCoffeeThumbnailList=SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT P JOIN ATTACHMENT A ON(PCODE=REF_BNO) WHERE KIND='C' AND BOARD_LEVEL=80 AND FILE_LEVEL=1 ORDER BY FILE_NO DESC
-
+6
 getListCount=SELECT COUNT(*) FROM PRODUCT
 
 #StoreBestSelect
