--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -18,3 +18,4 @@ selectIdList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID
 
 selectMyQnaList=SELECT USER_NO,MTM_TYPE,MTM_TITLE,CREATE_DATE, FROM MEMBER JOIN MEN_TO_MEN USING (USER_NO)
 
+selectGradeList=SELECT * FROM MEM_GRADE
