mypage servlet menbar 현철 수정

--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -8,7 +8,7 @@ selectList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,U
 
 getQnaListCount=SELECT COUNT(*) FROM MEN_TO_MEN WHERE USER_NO=?
 selectMyQnaList=SELECT * FROM (SELECT ROWNUM RNUM,A.* FROM (SELECT MTM_NO,USER_NO,MTM_TYPE,MTM_TITLE,CREATE_DATE  FROM MEMBER  JOIN MEN_TO_MEN USING (USER_NO) WHERE USER_NO=? ORDER BY MTM_NO DESC) A) WHERE ROWNUM BETWEEN ? AND ?
-
+MyPageInfo=
 
 
 getSearchListCount=SELECT COUNT(*) FROM MEMBER WHERE USER_ID LIKE '%' || ? || '%'
@@ -16,5 +16,6 @@ selectIdList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID
 
 
 
-selectMyQnaList=SELECT USER_NO,MTM_TYPE,MTM_TITLE,CREATE_DATE, FROM MEMBER JOIN MEN_TO_MEN USING (USER_NO)
 
+
+selectGradeList=SELECT * FROM MEM_GRADE
