views_store_css수정_하정

--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -7,7 +7,7 @@ selectProduct=SELECT * FROM PRODUCT WHERE PCODE=?
 selectAttachment=SELECT FILE_NO, ORIGIN_NAME, CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=?
 updateProduct=UPDAETE PRODUCT SET PNAME=?, SUP_PRICE=?, PRICE=?, STOCK=?, KEYWORD=?, KIND=?, PCONTENT=? WHERE PCODE=?
 updateAttachment=UPDATE ATTACHMENT SET CHANGENAME=?, ORIGIN_NAME=?, FILE_PATH=? WHERE FILE_NO=?
-updateNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?,?,?,?, SYSDATE, ?,DEFAULT,80)
+updateNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, REF_BNO,?,?,?, SYSDATE, ?,DEFAULT,80)
 
 
 #coffeeSelect
