--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -12,4 +12,7 @@ MyPageInfo=SELECT USER_NO,USER_NAME,GRADE_NAME,POINT,(SELECT COUNT(PCODE) FROM W
 getSearchListCount=SELECT COUNT(*) FROM MEMBER WHERE USER_ID LIKE '%' || ? || '%'
 selectIdList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,USER_NAME,PHONE,BIRTHDAY,GRADE_NAME,ENROLL_DATE,STATUS FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE USER_ID LIKE ? ORDER BY ENROLL_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
 
+selectGradeList1=SELECT * FROM MEM_GRADE
 
+getSearchKeywordListCount=SELECT COUNT(*) FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE STATUS = ? AND GRADE_NAME= ?
+selectSearchKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,USER_NAME,PHONE,BIRTHDAY,GRADE_NAME,ENROLL_DATE,STATUS FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE STATUS = ? AND GRADE_NAME=? ORDER BY ENROLL_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
