--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -6,7 +6,7 @@ selectList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,U
 
 
 getQnaListCount=SELECT COUNT(*) FROM MEN_TO_MEN WHERE USER_NO=?
-selectMyQnaList=SELECT * FROM (SELECT ROWNUM RNUM,A.* FROM (SELECT MTM_NO,USER_NO,MTM_TYPE,MTM_TITLE,CREATE_DATE  FROM MEMBER  JOIN MEN_TO_MEN USING (USER_NO) WHERE USER_NO=? ORDER BY MTM_NO DESC) A) WHERE ROWNUM BETWEEN ? AND ?
+selectMyQnaList=SELECT * FROM (SELECT ROWNUM RNUM,A.* FROM (SELECT MTM_NO,USER_NO,MTM_NAME,MTM_TITLE,CREATE_DATE  FROM MEMBER  JOIN MEN_TO_MEN USING (USER_NO)JOIN MTM_TYPE ON (MTM_TYPE =MTM_TYPE_NO) WHERE USER_NO=? ORDER BY MTM_NO DESC) A)WHERE ROWNUM BETWEEN ? AND ?
 MyPageInfo=SELECT USER_NO,USER_NAME,GRADE_NAME,POINT,(SELECT COUNT(PCODE) FROM WISH_LIST WHERE USER_NO=?) AS W ,(SELECT COUNT(*)FROM MEMBER  JOIN MEM_COUPON  USING (USER_NO) WHERE USER_NO=?) AS C FROM MEMBER JOIN MEM_GRADE USING (GRADE_CODE) JOIN POINT USING (USER_NO) JOIN WISH_LIST W USING (USER_NO) JOIN MEM_COUPON C USING (USER_NO) WHERE USER_NO=?
 
 getSearchListCount=SELECT COUNT(*) FROM MEMBER WHERE USER_ID LIKE '%' || ? || '%'
