--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -16,3 +16,10 @@ selectGradeList1=SELECT * FROM MEM_GRADE
 
 getSearchKeywordListCount=SELECT COUNT(*) FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE STATUS = ? AND GRADE_NAME= ?
 selectSearchKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,USER_NAME,PHONE,BIRTHDAY,GRADE_NAME,ENROLL_DATE,STATUS FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE STATUS = ? AND GRADE_NAME=? ORDER BY ENROLL_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
+
+getSearchAllStatusListCount=SELECT COUNT(*) FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE GRADE_NAME= ?
+selectAllStatusList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,USER_NAME,PHONE,BIRTHDAY,GRADE_NAME,ENROLL_DATE,STATUS FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE GRADE_NAME=? ORDER BY ENROLL_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
+
+getSearchAllGradeListCount=SELECT COUNT(*) FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE STATUS= ?
+selectAllGradeList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,USER_NAME,PHONE,BIRTHDAY,GRADE_NAME,ENROLL_DATE,STATUS FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE STATUS = ? ORDER BY ENROLL_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
+
