--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -12,7 +12,8 @@ updateNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, REF_BNO,?,?,?
 
 #coffeeSelect
 selectProductList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT FROM PRODUCT ORDER BY PCODE DESC) A) WHERE RNUM BETWEEN ? AND ?
-selectCoffeeThumbnailList=SELECT * FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT P JOIN ATTACHMENT A ON(PCODE=REF_BNO) WHERE KIND='C' AND BOARD_LEVEL=80 AND FILE_LEVEL=1 ORDER BY FILE_NO DESC) WHERE RNUM BETWEEN ? AND ?
+selectCoffeeThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT p JOIN ATTACHMENT ON(PCODE=REF_BNO) WHERE KIND='C' AND BOARD_LEVEL=80 AND FILE_LEVEL=1 ) A) WHERE RNUM BETWEEN ? AND ?
+
 
 #pagination
 getListCount=SELECT COUNT(*) FROM PRODUCT
@@ -23,5 +24,6 @@ getItemListCount=SELECT COUNT(*) FROM PRODUCT WHERE KIND='I'
 selectBestThumbnailList=SELECT ROWNUM, A.* FROM(SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT P JOIN ATTACHMENT A ON(PCODE=REF_BNO) WHERE BOARD_LEVEL=80 AND FILE_LEVEL=1 ORDER BY TOTAL_COUNT DESC) A WHERE ROWNUM <=16
 
 #itemSelect
-selectItemThumbnailList=SELECT * FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT P JOIN ATTACHMENT A ON(PCODE=REF_BNO) WHERE KIND='I' AND BOARD_LEVEL=80 AND FILE_LEVEL=1 ORDER BY FILE_NO DESC) WHERE RNUM BETWEEN ? AND ?
+selectItemThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT p JOIN ATTACHMENT ON(PCODE=REF_BNO) WHERE KIND='I' AND BOARD_LEVEL=80 AND FILE_LEVEL=1 ) A) WHERE RNUM BETWEEN ? AND ?
+
 
