--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -23,5 +23,5 @@ selectAllStatusList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,
 getSearchAllGradeListCount=SELECT COUNT(*) FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE STATUS= ?
 selectAllGradeList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,USER_NAME,PHONE,BIRTHDAY,GRADE_NAME,ENROLL_DATE,STATUS FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE STATUS = ? ORDER BY ENROLL_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
 
-insertMtm=INSERT INTO MEN_TO_MEN VALUES(NEXTVAL,?,?,?,?,SYSDATE,NULL,SYSDATE,DEFAULT,DEFAULT,DEFAULT)
-
+insertMtm=INSERT INTO MEN_TO_MEN VALUES(SEQ_MTMNO.nextval,?,?,?,?,SYSDATE,DEFAULT,SYSDATE,DEFAULT,DEFAULT,DEFAULT)
+insertAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_PNO.CURRVAL, ?,?,?,SYSDATE,?,DEFAULT,70)
