--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -26,4 +26,8 @@ selectBestThumbnailList=SELECT ROWNUM, A.* FROM(SELECT PCODE,PNAME,SUP_PRICE,PRI
 #itemSelect
 selectItemThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT p JOIN ATTACHMENT ON(PCODE=REF_BNO) WHERE KIND='I' AND BOARD_LEVEL=80 AND FILE_LEVEL=1 ) A) WHERE RNUM BETWEEN ? AND ?
 
+#detail
+selectAtList=SELECT FILE_NO, ORIGIN_NAME, CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=?
+#selectCoffee=SELECT PCODE,PNAME,PRICE,p.STATUS,KEYWORD,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT p JOIN ATTACHMENT ON (PCODE=REF_BNO) WHERE PCODE=?
+#selectItem=SELECT * FROM PRODUCT WHERE PCODE=? AND KIND='I' AND STATUS='Y'
 
