--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -25,3 +25,6 @@ selectAllGradeList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,U
 
 insertMtm=INSERT INTO MEN_TO_MEN VALUES(SEQ_MTMNO.nextval,?,?,?,?,SYSDATE,DEFAULT,SYSDATE,DEFAULT,DEFAULT,DEFAULT)
 insertAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_PNO.CURRVAL, ?,?,?,SYSDATE,?,DEFAULT,70)
+
+selectMtm=select MTM_NO,MTM_NAME,MTM_TITLE,USER_ID,CREATE_DATE,MTM_CONTENT FROM MEN_TO_MEN JOIN MEMBER USING (USER_NO) JOIN MTM_TYPE ON (MTM_TYPE=MTM_TYPE_NO) WHERE MTM_NO=?
+selectAttachment=select file_NO ,ORIGIN_NAME , CHANGE_NAME FROM ATTACHMENT where REF_BNO=?
