--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -4,7 +4,7 @@ insertAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_PNO.CURRVAL,
 
 #productUpdate
 selectProduct=SELECT * FROM PRODUCT WHERE PCODE=? ORDER BY PCODE DESC
-selectAttachment=SELECT FILE_NO, ORIGIN_NAME, CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=? 
+selectAttachment=SELECT FILE_NO, ORIGIN_NAME, CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=? ORDER BY FILE_NO
 updateProduct=UPDAETE PRODUCT SET PNAME=?, SUP_PRICE=?, PRICE=?, STOCK=?, KEYWORD=?, KIND=?, PCONTENT=? WHERE PCODE=?
 updateAttachment=UPDATE ATTACHMENT SET CHANGENAME=?, ORIGIN_NAME=?, FILE_PATH=? WHERE FILE_NO=?
 updateNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, REF_BNO,?,?,?, SYSDATE, ?,DEFAULT,80)
@@ -26,8 +26,5 @@ selectBestThumbnailList=SELECT ROWNUM, A.* FROM(SELECT PCODE,PNAME,SUP_PRICE,PRI
 #itemSelect
 selectItemThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT p JOIN ATTACHMENT ON(PCODE=REF_BNO) WHERE KIND='I' AND BOARD_LEVEL=80 AND FILE_LEVEL=1 ) A) WHERE RNUM BETWEEN ? AND ?
 
-#detail
-selectAtList=SELECT FILE_NO, ORIGIN_NAME, CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=?
-#selectCoffee=SELECT PCODE,PNAME,PRICE,p.STATUS,KEYWORD,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT p JOIN ATTACHMENT ON (PCODE=REF_BNO) WHERE PCODE=?
-#selectItem=SELECT * FROM PRODUCT WHERE PCODE=? AND KIND='I' AND STATUS='Y'
+
 
