--- a/teaspoonProject/src/sql/space/space-query.properties
+++ b/teaspoonProject/src/sql/space/space-query.properties
@@ -1,2 +1,2 @@
 #spaceInsert
-insertSpace=INSERT INTO RESERVATION VALUES(SEQ_RESERVNO.NEXTVAL, ?, SYSDATE, ?, ?, ?, ?, ?, ?, ?, ?)
+insertSpace=INSERT INTO RESERVATION VALUES(SEQ_RESERVNO.NEXTVAL, ?, SYSDATE, ?, ?, ?, ?, ?, DEFAULT, ?, ?, ?)
