--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -12,7 +12,7 @@ MyPageInfo=SELECT USER_NO,USER_NAME,GRADE_NAME,POINT,(SELECT COUNT(PCODE) FROM W
 getSearchListCount=SELECT COUNT(*) FROM MEMBER WHERE USER_ID LIKE '%' || ? || '%'
 selectIdList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,USER_NAME,PHONE,BIRTHDAY,GRADE_NAME,ENROLL_DATE,STATUS FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE USER_ID LIKE ? ORDER BY ENROLL_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
 
-selectGradeList1=SELECT * FROM MEM_GRADE
+selectGradeList1=SELECT GRADE_CODE,GRADE_NAME,MIN_ACOUNT,GRADE_RATE  FROM MEM_GRADE ORDER BY MIN_ACOUNT
 
 getSearchKeywordListCount=SELECT COUNT(*) FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE STATUS = ? AND GRADE_NAME= ?
 selectSearchKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,USER_NAME,PHONE,BIRTHDAY,GRADE_NAME,ENROLL_DATE,STATUS FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE STATUS = ? AND GRADE_NAME=? ORDER BY ENROLL_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
@@ -28,3 +28,7 @@ insertAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_PNO.CURRVAL,
 
 selectMtm=select MTM_NO,MTM_NAME,MTM_TITLE,USER_ID,CREATE_DATE,MTM_CONTENT FROM MEN_TO_MEN JOIN MEMBER USING (USER_NO) JOIN MTM_TYPE ON (MTM_TYPE=MTM_TYPE_NO) WHERE MTM_NO=?
 selectAttachment=select file_NO ,ORIGIN_NAME , CHANGE_NAME FROM ATTACHMENT where REF_BNO=?
+
+insertGrade=INSERT INTO MEM_GRADE VALUES(SEQ_GNO.NEXTVAL,?,?,?)
+updateMemberGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT BETWEEN (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?) AND (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?)
+
