--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -19,6 +19,7 @@ selectCoffeeThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PC
 getListCount=SELECT COUNT(*) FROM PRODUCT
 getCoffeeListCount=SELECT COUNT(*) FROM PRODUCT WHERE KIND='C'
 getItemListCount=SELECT COUNT(*) FROM PRODUCT WHERE KIND='I'
+getReviewListCount=SELECT COUNT(*) FROM REVIEW
 
 #StoreBestSelect
 selectBestThumbnailList=SELECT ROWNUM, A.* FROM(SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT P JOIN ATTACHMENT A ON(PCODE=REF_BNO) WHERE BOARD_LEVEL=80 AND FILE_LEVEL=1 ORDER BY TOTAL_COUNT DESC) A WHERE ROWNUM <=16
@@ -28,5 +29,5 @@ selectItemThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCOD
 
 #reviewSelect
 selectReviewList=SELECT * FROM(SELECT ROWNUM RNUM, A.* FROM (SELECT REVIEW_NO, CREATE_DATE, PCODE, CONTENT, USER_NO, USER_ID, USER_NAME, PNAME FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) ORDER BY REVIEW_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
-
+selectReviewDetail=SELECT REVIEW_NO, PNAME, USER_NAME, USER_ID, CREATE_DATE, CONTENT FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) WHERE REVIEW_NO=?
 
