store_review생성_하정(쿼리포함)

--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -30,4 +30,4 @@ selectItemThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCOD
 #reviewSelect
 selectReviewList=SELECT * FROM(SELECT ROWNUM RNUM, A.* FROM (SELECT REVIEW_NO, CREATE_DATE, PCODE, CONTENT, USER_NO, USER_ID, USER_NAME, PNAME FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) ORDER BY REVIEW_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 selectReviewDetail=SELECT REVIEW_NO, PNAME, USER_NAME, USER_ID, CREATE_DATE, CONTENT FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) WHERE REVIEW_NO=?
-
+selectProductReview=SELECT REVIEW_NO, USER_ID, USER_NAME, CONTENT, CREATE_DATE FROM REVIEW JOIN MEMBER USING(USER_NO) WHERE PCODE=? ORDER BY REVIEW_NO DESC
