--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -24,10 +24,10 @@ getSearchAllGradeListCount=SELECT COUNT(*) FROM MEMBER JOIN MEM_GRADE USING(GRAD
 selectAllGradeList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,USER_NAME,PHONE,BIRTHDAY,GRADE_NAME,ENROLL_DATE,STATUS FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) WHERE STATUS = ? ORDER BY ENROLL_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
 
 insertMtm=INSERT INTO MEN_TO_MEN VALUES(SEQ_MTMNO.nextval,?,?,?,?,SYSDATE,DEFAULT,SYSDATE,DEFAULT,DEFAULT,DEFAULT)
-insertAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_PNO.CURRVAL, ?,?,?,SYSDATE,?,DEFAULT,70)
+insertAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_MTMNO.CURRVAL, ?,?,?,SYSDATE,?,DEFAULT,70)
 
-selectMtm=select MTM_NO,MTM_NAME,MTM_TITLE,USER_ID,CREATE_DATE,MTM_CONTENT FROM MEN_TO_MEN JOIN MEMBER USING (USER_NO) JOIN MTM_TYPE ON (MTM_TYPE=MTM_TYPE_NO) WHERE MTM_NO=?
-selectAttachment=select file_NO ,ORIGIN_NAME , CHANGE_NAME FROM ATTACHMENT where REF_BNO=?
+selectMtm=select MTM_NO,MTM_TYPE,MTM_TITLE,USER_ID,CREATE_DATE,MTM_CONTENT FROM MEN_TO_MEN JOIN MEMBER USING (USER_NO) JOIN MTM_TYPE ON (MTM_TYPE=MTM_TYPE_NO) WHERE MTM_NO=?
+selectAttachment=select file_NO ,ORIGIN_NAME , CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=?
 
 insertGrade=INSERT INTO MEM_GRADE VALUES(SEQ_GNO.NEXTVAL,?,?,?)
 updateMemberGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT BETWEEN (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?) AND (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?)
