store-wish수정_하정

--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -38,3 +38,4 @@ updateMemberGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT BETWEEN (SELECT
 updateMemberMaxGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT >=(SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?)
 
 selectProduct=SELECT * FROM PRODUCT WHERE PCODE=?
+insertWishList=INSERT INTO WISH_LIST VALUES(?,?,SYSDATE)
