member properties 수정_한경
member properties 수정_한경

--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -29,7 +29,7 @@ insertAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_MTMNO.CURRVA
 selectMtm=select MTM_NO,MTM_TYPE,MTM_TITLE,USER_ID,CREATE_DATE,MTM_CONTENT FROM MEN_TO_MEN JOIN MEMBER USING (USER_NO) JOIN MTM_TYPE ON (MTM_TYPE=MTM_TYPE_NO) WHERE MTM_NO=?
 selectAttachment=select file_NO ,ORIGIN_NAME , CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=?
 
-insertMember=INSERT INTO MEMBER VALUES(SEQ_UNO.NEXTVAL, 10, ?, ?, ?, 1, ?, ?, ?,SYSDATE, SYSDATE, 0,'N', 'Y')
+insertMember=INSERT INTO MEMBER VALUES(SEQ_UNO.NEXTVAL, 10, ?, ?, ?, ?, ?, ?, ?,SYSDATE, SYSDATE, 0,'N', 'Y')
 updateMember=UPDATE MEMBER SET USER_NAME=?, BIRTHDAY=?, PHONE=?, USER_ID=?, USER_PWD=?, EMAIL=?, MODIFY_DATE=SYSDATE WHERE USER_ID=?
 
 idCheck=SELECT COUNT(*) FROM MEMBER WHERE USER_ID=?
