--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -39,3 +39,5 @@ updateMemberMaxGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT >=(SELECT MI
 
 selectProduct=SELECT * FROM PRODUCT WHERE PCODE=?
 insertWishList=INSERT INTO WISH_LIST VALUES(?,?,SYSDATE)
+selectOneWishList=SELECT COUNT(*) FROM WISHLIST WHERE USER_NO=? AND PCODE=?
+deleteWish=DELETE FROM WISHLIST WHERE USER_NO=? AND PCODE=?
