magazine_insert_수정_기하
magazine_insert_수정_기하

--- a/teaspoonProject/src/sql/board/board-query.properties
+++ b/teaspoonProject/src/sql/board/board-query.properties
@@ -3,3 +3,4 @@ getMagazineListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=20
 selectMagazineList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO,BOARD_TITLE,COUNT,CREATE_DATE,MODIFY_DATE,STATUS FROM BOARD WHERE BOARD_CATEGORY=20 ORDER BY BOARD_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 selectBoard=SELECT * FROM BOARD WHERE BOARD_NO = ?
 updateBoard=UPDATE BOARD SET BOARD_TITLE = ?, BOARD_CONTENT = ?, MODIFY_DATE = SYSDATE WHERE BOARD_NO = ?
+insertAttachemnt=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_BNO.CURRVAL, ?,?,?,SYSDATE,1,DEFAULT,20)
