--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -30,8 +30,8 @@ selectMtm=select MTM_NO,MTM_TYPE,MTM_TITLE,USER_ID,CREATE_DATE,MTM_CONTENT FROM 
 selectAttachment=select file_NO ,ORIGIN_NAME , CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=?
 
 insertMember=INSERT INTO MEMBER VALUES(SEQ_UNO.NEXTVAL, 10, ?, ?, ?, ?, ?, ?, ?,SYSDATE, SYSDATE, 0,'N', 'Y')
-updateMember=UPDATE MEMBER SET USER_NAME=?, BIRTHDAY=?, PHONE=?, USER_ID=?, USER_PWD=?, EMAIL=?, MODIFY_DATE=SYSDATE WHERE USER_ID=?
-
+updateMember=UPDATE MEMBER SET USER_ID=?,  USER_PWD=?, USER_NAME=?, BIRTHDAY=?, PHONE=?, EMAIL=?, MODIFY_DATE=SYSDATE WHERE USER_ID=?
+selectMember=SELECT * FROM MEMBER WHERE USER_ID=?
 idCheck=SELECT COUNT(*) FROM MEMBER WHERE USER_ID=?
 insertGrade=INSERT INTO MEM_GRADE VALUES(SEQ_GNO.NEXTVAL,?,?,?)
 updateMemberGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT BETWEEN (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?) AND (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?)
