--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -5,8 +5,8 @@ getListCount=SELECT COUNT(*) FROM MEMBER
 selectList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,USER_ID,USER_NAME,PHONE,BIRTHDAY,GRADE_NAME,ENROLL_DATE,STATUS FROM MEMBER JOIN MEM_GRADE USING(GRADE_CODE) ORDER BY ENROLL_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
 
 
-getQnaListCount=SELECT COUNT(*) FROM MEN_TO_MEN WHERE USER_NO=?
-selectMyQnaList=SELECT * FROM (SELECT ROWNUM RNUM,A.* FROM (SELECT MTM_NO,USER_NO,MTM_NAME,MTM_TITLE,CREATE_DATE  FROM MEMBER  JOIN MEN_TO_MEN USING (USER_NO)JOIN MTM_TYPE ON (MTM_TYPE =MTM_TYPE_NO) WHERE USER_NO=? ORDER BY MTM_NO DESC) A)WHERE ROWNUM BETWEEN ? AND ?
+getQnaListCount=SELECT COUNT(*) FROM MEN_TO_MEN WHERE USER_NO=? AND STATUS='Y'
+selectMyQnaList=SELECT * FROM (SELECT ROWNUM RNUM,A.* FROM (SELECT MTM_NO,USER_NO,MTM_NAME,MTM_TITLE,CREATE_DATE  FROM MEMBER  JOIN MEN_TO_MEN M USING (USER_NO)JOIN MTM_TYPE ON (MTM_TYPE =MTM_TYPE_NO) WHERE USER_NO=? AND M.STATUS='Y' ORDER BY MTM_NO DESC) A)WHERE ROWNUM BETWEEN ? AND ?
 MyPageInfo=SELECT USER_NO,USER_NAME,G.GRADE_NAME,POINT_PRICE,(SELECT COUNT(PCODE) FROM MEMBER JOIN WISH_LIST W USING(USER_NO) WHERE USER_NO= ?) AS W ,(SELECT COUNT(*)FROM MEMBER  JOIN MEM_COUPON C  USING (USER_NO) WHERE USER_NO= ?) AS C FROM MEMBER M JOIN MEM_GRADE G USING (GRADE_CODE) JOIN POINT USING (USER_NO) WHERE USER_NO= ?
 
 getSearchListCount=SELECT COUNT(*) FROM MEMBER WHERE USER_ID LIKE '%' || ? || '%'
@@ -25,8 +25,8 @@ selectAllGradeList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT USER_NO,U
 
 insertMtm=INSERT INTO MEN_TO_MEN VALUES(SEQ_MTMNO.nextval,?,?,?,?,SYSDATE,DEFAULT,SYSDATE,DEFAULT,DEFAULT,DEFAULT)
 insertAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_MTMNO.CURRVAL, ?,?,?,SYSDATE,?,DEFAULT,70)
-
-selectMtm=select MTM_NO,MTM_TYPE,MTM_TITLE,USER_ID,CREATE_DATE,MTM_CONTENT FROM MEN_TO_MEN JOIN MEMBER USING (USER_NO) JOIN MTM_TYPE ON (MTM_TYPE=MTM_TYPE_NO) WHERE MTM_NO=?
+updateMtm=UPDATE MEN_TO_MEN SET STATUS='N' WHERE MTM_NO=?
+selectMtm=select MTM_NO,MTM_TYPE,MTM_TITLE,USER_ID,CREATE_DATE,MTM_CONTENT FROM MEN_TO_MEN M JOIN MEMBER USING (USER_NO)  JOIN MTM_TYPE ON (MTM_TYPE=MTM_TYPE_NO) WHERE MTM_NO=? and M.status='Y'
 selectAttachment=select file_NO ,ORIGIN_NAME , CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=?
 
 insertMember=INSERT INTO MEMBER VALUES(SEQ_UNO.NEXTVAL, 10, ?, ?, ?, ?, ?, ?, ?,SYSDATE, SYSDATE, 0,'N', 'Y')
