--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -32,3 +32,4 @@ selectReviewList=SELECT * FROM(SELECT ROWNUM RNUM, A.* FROM (SELECT REVIEW_NO, C
 selectReviewDetail=SELECT REVIEW_NO, PNAME, USER_NAME, USER_ID, CREATE_DATE, CONTENT FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) WHERE REVIEW_NO=?
 selectProductReview=SELECT REVIEW_NO, USER_ID, USER_NAME, CONTENT, CREATE_DATE FROM REVIEW JOIN MEMBER USING(USER_NO) WHERE PCODE=? ORDER BY REVIEW_NO DESC 
 selectAddReviewList=SELECT * FROM(SELECT ROWNUM RNUM, A.* FROM (SELECT REVIEW_NO, CREATE_DATE, PCODE, CONTENT, USER_NO, USER_ID, USER_NAME, PNAME FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) ORDER BY REVIEW_NO DESC) A) WHERE PCODE=? RNUM BETWEEN 1 AND ?
+selectProductReviewList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT REVIEW_NO, CREATE_DATE, PCODE, CONTENT, USER_NO, USER_ID, USER_NAME, PNAME FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) ORDER BY REVIEW_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
