admin-store삭제기능(완)_하정
status를 n으로 변경하는 방식

--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -3,29 +3,29 @@ insertProduct=INSERT INTO PRODUCT VALUES(SEQ_PNO.NEXTVAL,?,?,?,?,DEFAULT,?,DEFAU
 insertAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_PNO.CURRVAL, ?,?,?,SYSDATE,?,DEFAULT,80)
 
 #productUpdate
-selectProduct=SELECT * FROM PRODUCT WHERE PCODE=? ORDER BY PCODE DESC
+selectProduct=SELECT * FROM PRODUCT WHERE PCODE=? AND STATUS='Y' ORDER BY PCODE DESC
 selectAttachment=SELECT FILE_NO, ORIGIN_NAME, CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=? ORDER BY FILE_NO
-updateProduct=UPDAETE PRODUCT SET PNAME=?, SUP_PRICE=?, PRICE=?, STOCK=?, KEYWORD=?, KIND=?, PCONTENT=? WHERE PCODE=?
+updateProduct=UPDAETE PRODUCT SET PNAME=?, SUP_PRICE=?, PRICE=?, STOCK=?, KEYWORD=?, KIND=?, PCONTENT=? WHERE PCODE=? AND STATUS='Y'
 updateAttachment=UPDATE ATTACHMENT SET CHANGENAME=?, ORIGIN_NAME=?, FILE_PATH=? WHERE FILE_NO=?
 updateNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, REF_BNO,?,?,?, SYSDATE, ?,DEFAULT,80)
 
 
 #coffeeSelect
-selectProductList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT FROM PRODUCT ORDER BY PCODE DESC) A) WHERE RNUM BETWEEN ? AND ?
-selectCoffeeThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT p JOIN ATTACHMENT ON(PCODE=REF_BNO) WHERE KIND='C' AND BOARD_LEVEL=80 AND FILE_LEVEL=1 ) A) WHERE RNUM BETWEEN ? AND ?
+selectProductList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT FROM PRODUCT WHERE STATUS='Y' ORDER BY PCODE DESC) A) WHERE RNUM BETWEEN ? AND ?
+selectCoffeeThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT p JOIN ATTACHMENT ON(PCODE=REF_BNO) WHERE KIND='C' AND BOARD_LEVEL=80 AND FILE_LEVEL=1 AND P.STATUS='Y') A) WHERE RNUM BETWEEN ? AND ?
 
 
 #pagination
-getListCount=SELECT COUNT(*) FROM PRODUCT
-getCoffeeListCount=SELECT COUNT(*) FROM PRODUCT WHERE KIND='C'
-getItemListCount=SELECT COUNT(*) FROM PRODUCT WHERE KIND='I'
+getListCount=SELECT COUNT(*) FROM PRODUCT WHERE STATUS='Y'
+getCoffeeListCount=SELECT COUNT(*) FROM PRODUCT WHERE KIND='C' AND STATUS='Y'
+getItemListCount=SELECT COUNT(*) FROM PRODUCT WHERE KIND='I' AND STATUS='Y'
 getReviewListCount=SELECT COUNT(*) FROM REVIEW
 
 #StoreBestSelect
-selectBestThumbnailList=SELECT ROWNUM, A.* FROM(SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT P JOIN ATTACHMENT A ON(PCODE=REF_BNO) WHERE BOARD_LEVEL=80 AND FILE_LEVEL=1 ORDER BY TOTAL_COUNT DESC) A WHERE ROWNUM <=16
+selectBestThumbnailList=SELECT ROWNUM, A.* FROM(SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT P JOIN ATTACHMENT A ON(PCODE=REF_BNO) WHERE BOARD_LEVEL=80 AND FILE_LEVEL=1 AND P.STATUS='Y' ORDER BY TOTAL_COUNT DESC) A WHERE ROWNUM <=16
 
 #itemSelect
-selectItemThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT p JOIN ATTACHMENT ON(PCODE=REF_BNO) WHERE KIND='I' AND BOARD_LEVEL=80 AND FILE_LEVEL=1 ) A) WHERE RNUM BETWEEN ? AND ?
+selectItemThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT p JOIN ATTACHMENT ON(PCODE=REF_BNO) WHERE KIND='I' AND BOARD_LEVEL=80 AND FILE_LEVEL=1 AND P.STATUS='Y') A) WHERE RNUM BETWEEN ? AND ?
 
 #reviewSelect
 selectReviewList=SELECT * FROM(SELECT ROWNUM RNUM, A.* FROM (SELECT REVIEW_NO, CREATE_DATE, PCODE, CONTENT, USER_NO, USER_ID, USER_NAME, PNAME FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) ORDER BY REVIEW_NO DESC) A) WHERE PCODE=? RNUM BETWEEN 1 AND 3
@@ -34,8 +34,8 @@ selectProductReview=SELECT REVIEW_NO, USER_ID, USER_NAME, CONTENT, CREATE_DATE F
 selectAddReviewList=SELECT * FROM(SELECT ROWNUM RNUM, A.* FROM (SELECT REVIEW_NO, CREATE_DATE, PCODE, CONTENT, USER_NO, USER_ID, USER_NAME, PNAME FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) ORDER BY REVIEW_NO DESC) A) WHERE PCODE=? RNUM BETWEEN 1 AND ?
 selectProductReviewList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT REVIEW_NO, CREATE_DATE, PCODE, CONTENT, USER_NO, USER_ID, USER_NAME, PNAME FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) ORDER BY REVIEW_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 
-#deleteReview
+#delete
 deleteReview=DELETE FROM REVIEW WHERE REVIEW_NO=?
-
+deleteProduct=UPDATE PRODUCT SET STATUS='N' WHERE PCODE=?
 
 
