magazine_수정 및 경로수정_기하
magazine_수정 및 경로수정_기하

--- a/teaspoonProject/src/sql/board/board-query.properties
+++ b/teaspoonProject/src/sql/board/board-query.properties
@@ -2,8 +2,10 @@ insertBoard=INSERT INTO BOARD(BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTE
 getMagazineListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=20
 selectMagazineList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO,BOARD_TITLE,COUNT,CREATE_DATE,MODIFY_DATE,STATUS FROM BOARD WHERE BOARD_CATEGORY=20 ORDER BY BOARD_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 selectBoard=SELECT * FROM BOARD WHERE BOARD_NO = ?
-updateBoard=UPDATE BOARD SET BOARD_TITLE = ?, BOARD_CONTENT = ?, MODIFY_DATE = SYSDATE WHERE BOARD_NO = ?
+updateBoard=UPDATE BOARD SET BOARD_TITLE = ?, BOARD_CONTENT = ?, MODIFY_DATE = SYSDATE, STATUS = ? WHERE BOARD_NO = ?
 insertAttachemnt=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_BNO.CURRVAL, ?,?,?,SYSDATE,1,DEFAULT,20)
 selectAttachment=SELECT * FROM ATTACHMENT WHERE REF_BNO=?
 updateAttachment=UPDATE ATTACHMENT SET CHANGE_NAME=?, ORIGIN_NAME=?, FILE_PATH=1 WHERE FILE_NO=?
 insertNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?, ?, ?, ?, SYSDATE,1,DEFAULT,20)
+selectMagazineThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT FILE_NO, REF_BNO, ORIGIN_NAME, CHANGE_NAME, FILE_PATH, UPLOAD_DATE, FILE_LEVEL, STATUS, BOARD_LEVEL FROM ATTACHMENT WHERE BOARD_LEVEL=20 ORDER BY REF_BNO DESC) A) WHERE RNUM BETWEEN ? AND ?
+
