--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -7,7 +7,7 @@ selectProduct=SELECT * FROM PRODUCT WHERE PCODE=? AND STATUS='Y' ORDER BY PCODE 
 selectAttachment=SELECT FILE_NO, ORIGIN_NAME, CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=? ORDER BY FILE_NO
 updateProduct=UPDATE PRODUCT SET PNAME=?, SUP_PRICE=?, PRICE=?, STOCK=?, KEYWORD=?, KIND=?, PCONTENT=? WHERE PCODE=? AND STATUS='Y'
 updateAttachment=UPDATE ATTACHMENT SET CHANGE_NAME=?, ORIGIN_NAME=?, FILE_PATH=? WHERE FILE_NO=?
-insertNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, REF_BNO,?,?,?, SYSDATE, ?,DEFAULT,80)
+insertNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?,?,?,?, SYSDATE, ?,DEFAULT,80)
 
 
 #coffeeSelect
