member properties 수정_한경

--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -30,7 +30,7 @@ selectMtm=select MTM_NO,MTM_TYPE,MTM_TITLE,USER_ID,CREATE_DATE,MTM_CONTENT FROM 
 selectAttachment=select file_NO ,ORIGIN_NAME , CHANGE_NAME FROM ATTACHMENT WHERE REF_BNO=?
 
 insertMember=INSERT INTO MEMBER VALUES(SEQ_UNO.NEXTVAL, 10, ?, ?, ?, ?, ?, ?, ?,SYSDATE, SYSDATE, 0,'N', 'Y')
-updateMember=UPDATE MEMBER SET USER_ID=?,  USER_PWD=?, USER_NAME=?, BIRTHDAY=?, PHONE=?, EMAIL=?, MODIFY_DATE=SYSDATE WHERE USER_ID=?
+updateMember=UPDATE MEMBER SET USER_PWD=?, PHONE=?, EMAIL=? WHERE USER_NO=?
 selectMember=SELECT * FROM MEMBER WHERE USER_ID=?
 idCheck=SELECT COUNT(*) FROM MEMBER WHERE USER_ID=?
 insertGrade=INSERT INTO MEM_GRADE VALUES(SEQ_GNO.NEXTVAL,?,?,?)
