--- a/teaspoonProject/src/sql/board/board-query.properties
+++ b/teaspoonProject/src/sql/board/board-query.properties
@@ -1,6 +1,6 @@
 insertBoard=INSERT INTO BOARD(BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, STATUS) VALUES(SEQ_BNO.NEXTVAL,20,?,?,DEFAULT,SYSDATE,SYSDATE,DEFAULT)
 getMagazineListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=20
-selectMagazineList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO,BOARD_TITLE,COUNT,CREATE_DATE,MODIFY_DATE,STATUS FROM BOARD WHERE BOARD_CATEGORY=20 ORDER BY BOARD_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
+selectMagazineList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO,BOARD_CATEGORY,BOARD_TITLE,BOARD_CONTENT,COUNT,CREATE_DATE,MODIFY_DATE,B.STATUS,CHANGE_NAME FROM BOARD B JOIN ATTACHMENT ON(BOARD_NO=REF_BNO) WHERE BOARD_CATEGORY=20 AND BOARD_LEVEL=20 AND FILE_LEVEL=1 AND B.STATUS='Y' ORDER BY BOARD_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 selectBoard=SELECT * FROM BOARD WHERE BOARD_NO = ?
 updateBoard=UPDATE BOARD SET BOARD_TITLE = ?, BOARD_CONTENT = ?, MODIFY_DATE = SYSDATE, STATUS = ? WHERE BOARD_NO = ?
 insertAttachemnt=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_BNO.CURRVAL, ?,?,?,SYSDATE,1,DEFAULT,20)
