store-review커밋_하정

--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -28,10 +28,10 @@ selectBestThumbnailList=SELECT ROWNUM, A.* FROM(SELECT PCODE,PNAME,SUP_PRICE,PRI
 selectItemThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE,PNAME,SUP_PRICE,PRICE,STOCK,P.STATUS,KEYWORD,TOTAL_COUNT,KIND,PCONTENT,CHANGE_NAME FROM PRODUCT p JOIN ATTACHMENT ON(PCODE=REF_BNO) WHERE KIND='I' AND BOARD_LEVEL=80 AND FILE_LEVEL=1 AND P.STATUS='Y') A) WHERE RNUM BETWEEN ? AND ?
 
 #reviewSelect
-selectReviewList=SELECT * FROM(SELECT ROWNUM RNUM, A.* FROM (SELECT REVIEW_NO, CREATE_DATE, PCODE, CONTENT, USER_NO, USER_ID, USER_NAME, PNAME FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) ORDER BY REVIEW_NO DESC) A) WHERE PCODE=? RNUM BETWEEN 1 AND 3
+selectReviewList=SELECT * FROM(SELECT ROWNUM RNUM, A.* FROM (SELECT REVIEW_NO, CREATE_DATE, PCODE, CONTENT, USER_NO, USER_ID, USER_NAME, PNAME FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) WHERE PCODE=? ORDER BY REVIEW_NO DESC) A) WHERE RNUM BETWEEN 1 AND 3
 selectReviewDetail=SELECT REVIEW_NO, PNAME, USER_NAME, USER_ID, CREATE_DATE, CONTENT FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) WHERE REVIEW_NO=?
 selectProductReview=SELECT REVIEW_NO, USER_ID, USER_NAME, CONTENT, CREATE_DATE FROM REVIEW JOIN MEMBER USING(USER_NO) WHERE PCODE=? ORDER BY REVIEW_NO DESC 
-selectAddReviewList=SELECT * FROM(SELECT ROWNUM RNUM, A.* FROM (SELECT REVIEW_NO, CREATE_DATE, PCODE, CONTENT, USER_NO, USER_ID, USER_NAME, PNAME FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) ORDER BY REVIEW_NO DESC) A) WHERE PCODE=? RNUM BETWEEN 1 AND ?
+selectAddReviewList=SELECT * FROM(SELECT ROWNUM RNUM, A.* FROM (SELECT REVIEW_NO, CREATE_DATE, PCODE, CONTENT, USER_NO, USER_ID, USER_NAME, PNAME FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) WHERE PCODE=? ORDER BY REVIEW_NO DESC) A) WHERE RNUM BETWEEN 1 AND ?
 selectProductReviewList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT REVIEW_NO, CREATE_DATE, PCODE, CONTENT, USER_NO, USER_ID, USER_NAME, PNAME FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) ORDER BY REVIEW_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 
 #delete
