mypage_idSearch 수정_한경
mypage_idSearch 수정

--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -33,6 +33,7 @@ insertMember=INSERT INTO MEMBER VALUES(SEQ_UNO.NEXTVAL, 10, ?, ?, ?, ?, ?, ?, ?,
 updateMember=UPDATE MEMBER SET USER_PWD=?, PHONE=?, EMAIL=? WHERE USER_NO=?
 selectMember=SELECT * FROM MEMBER WHERE USER_ID=?
 idCheck=SELECT COUNT(*) FROM MEMBER WHERE USER_ID=?
+emailCheck=SELECT COUNT(*) FROM MEMBER WHERE EMAIL=?
 insertGrade=INSERT INTO MEM_GRADE VALUES(SEQ_GNO.NEXTVAL,?,?,?)
 updateMemberGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT BETWEEN (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?) AND (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?)
 updateMemberMaxGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT >=(SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?)
