--- a/teaspoonProject/src/sql/board/board-query.properties
+++ b/teaspoonProject/src/sql/board/board-query.properties
@@ -8,4 +8,4 @@ selectAttachment=SELECT * FROM ATTACHMENT WHERE REF_BNO=?
 updateAttachment=UPDATE ATTACHMENT SET CHANGE_NAME=?, ORIGIN_NAME=?, FILE_PATH=1 WHERE FILE_NO=?
 insertNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?, ?, ?, ?, SYSDATE,1,DEFAULT,20)
 selectMagazineThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT FILE_NO, REF_BNO, ORIGIN_NAME, CHANGE_NAME, FILE_PATH, UPLOAD_DATE, FILE_LEVEL, STATUS, BOARD_LEVEL FROM ATTACHMENT WHERE BOARD_LEVEL=20 ORDER BY REF_BNO DESC) A) WHERE RNUM BETWEEN ? AND ?
-
+deleteBoard=UPDATE BOARD SET STATUS='N' WHERE BOARD_NO=?	
