mypage _ point 현철 생성및수정
김가둘의 포인트 조회와 서블릿생성및 포인트 vo생성

--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -44,3 +44,8 @@ selectWishList=SELECT PCODE, PNAME, PRICE, KIND, CHANGE_NAME FROM PRODUCT JOIN W
 insertWishList=INSERT INTO WISH_LIST VALUES(?,?,SYSDATE)
 selectOneWishList=SELECT COUNT(*) FROM WISH_LIST WHERE USER_NO=? AND PCODE=?
 deleteWish=DELETE FROM WISH_LIST WHERE USER_NO=? AND PCODE=?
+
+
+selectPointList=select  point_date,DIVISION,CONTENT,POINT_PRICE FROM MEMBER JOIN POINT USING (USER_NO) WHERE USER_NO=?
+getPointListCount=select COUNT(*)FROM MEMBER JOIN POINT USING (USER_NO) WHERE USER_NO=?
+
