--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -46,6 +46,6 @@ selectOneWishList=SELECT COUNT(*) FROM WISH_LIST WHERE USER_NO=? AND PCODE=?
 deleteWish=DELETE FROM WISH_LIST WHERE USER_NO=? AND PCODE=?
 
 
-selectPointList=select  point_date,DIVISION,CONTENT,POINT_PRICE FROM MEMBER JOIN POINT USING (USER_NO) WHERE USER_NO=?
+selectPointList=SELECT * FROM (SELECT ROWNUM RNUM,A.* FROM(select  user_no,point_date,DIVISION,CONTENT,POINT_PRICE FROM MEMBER JOIN POINT USING (USER_NO) WHERE USER_NO=? ORDER BY POINT_DATE DESC)A) WHERE RNUM BETWEEN ? AND ?
 getPointListCount=select COUNT(*)FROM MEMBER JOIN POINT USING (USER_NO) WHERE USER_NO=?
 
