관리자매거진_키워드검색_하정

--- a/teaspoonProject/src/sql/board/board-query.properties
+++ b/teaspoonProject/src/sql/board/board-query.properties
@@ -9,3 +9,5 @@ updateAttachment=UPDATE ATTACHMENT SET CHANGE_NAME=?, ORIGIN_NAME=?, FILE_PATH=1
 insertNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?, ?, ?, ?, SYSDATE,1,DEFAULT,20)
 selectMagazineThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT FILE_NO, REF_BNO, ORIGIN_NAME, CHANGE_NAME, FILE_PATH, UPLOAD_DATE, FILE_LEVEL, STATUS, BOARD_LEVEL FROM ATTACHMENT WHERE BOARD_LEVEL=20 ORDER BY REF_BNO DESC) A) WHERE RNUM BETWEEN ? AND ?
 deleteBoard=UPDATE BOARD SET STATUS='N' WHERE BOARD_NO=?	
+
+selectMagazineKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO, BOARD_TITLE, COUNT, CREATE_DATE, MODIFY_DATE, STATUS FROM BOARD WHERE BOARD_TITLE LIKE ? ORDER BY CREATE_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
