--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -52,3 +52,5 @@ deleteWish=DELETE FROM WISH_LIST WHERE USER_NO=? AND PCODE=?
 selectPointList=SELECT * FROM (SELECT ROWNUM RNUM,A.* FROM(select  user_no,point_date,DIVISION,CONTENT,POINT_PRICE FROM MEMBER JOIN POINT USING (USER_NO) WHERE USER_NO=? ORDER BY POINT_DATE DESC)A) WHERE RNUM BETWEEN ? AND ?
 getPointListCount=select COUNT(*)FROM MEMBER JOIN POINT USING (USER_NO) WHERE USER_NO=?
 
+# 1to1 admin
+selectMtmAdminCount=select COUNT(*) FROM MEN_TO_MEN 
