--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -35,6 +35,8 @@ selectMember=SELECT * FROM MEMBER WHERE USER_ID=?
 idCheck=SELECT COUNT(*) FROM MEMBER WHERE USER_ID=?
 emailCheck=SELECT COUNT(*) FROM MEMBER WHERE EMAIL=?
 idfindCheck=SELECT USER_ID FROM MEMBER WHERE EMAIL=?
+selectUserPwd=SELECT USER_PWD,EMAIL FROM MEMBER WHERE USER_ID=?
+
 insertGrade=INSERT INTO MEM_GRADE VALUES(SEQ_GNO.NEXTVAL,?,?,?)
 updateMemberGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT BETWEEN (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?) AND (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?)
 updateMemberMaxGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT >=(SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?)
