이벤트+매거진_검색기능추가_하정

--- a/teaspoonProject/src/sql/board/board-query.properties
+++ b/teaspoonProject/src/sql/board/board-query.properties
@@ -5,20 +5,22 @@ selectAttachment=SELECT * FROM ATTACHMENT WHERE REF_BNO=?
 updateAttachment=UPDATE ATTACHMENT SET CHANGE_NAME=?, ORIGIN_NAME=?, FILE_PATH=1 WHERE FILE_NO=?
 deleteBoard=UPDATE BOARD SET STATUS='N' WHERE BOARD_NO=?	
 
-#magazine 
+#magazine(20)
 insertMagazine=INSERT INTO BOARD(BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, STATUS) VALUES(SEQ_BNO.NEXTVAL,20,?,?,DEFAULT,SYSDATE,SYSDATE,DEFAULT)
 insertMagazineAttachemnt=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_BNO.CURRVAL, ?,?,?,SYSDATE,1,DEFAULT,20)
 getMagazineListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=20
 selectMagazineList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO,BOARD_CATEGORY,BOARD_TITLE,BOARD_CONTENT,COUNT,CREATE_DATE,MODIFY_DATE,B.STATUS,CHANGE_NAME FROM BOARD B JOIN ATTACHMENT ON(BOARD_NO=REF_BNO) WHERE BOARD_CATEGORY=20 AND BOARD_LEVEL=20 AND FILE_LEVEL=1 AND B.STATUS='Y' ORDER BY BOARD_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 selectMagazineThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT FILE_NO, REF_BNO, ORIGIN_NAME, CHANGE_NAME, FILE_PATH, UPLOAD_DATE, FILE_LEVEL, STATUS, BOARD_LEVEL FROM ATTACHMENT WHERE BOARD_LEVEL=20 ORDER BY REF_BNO DESC) A) WHERE RNUM BETWEEN ? AND ?
 insertMagazineNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?, ?, ?, ?, SYSDATE,1,DEFAULT,20)
-selectMagazineKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO, BOARD_TITLE, COUNT, CREATE_DATE, MODIFY_DATE, STATUS FROM BOARD WHERE BOARD_TITLE LIKE ? ORDER BY CREATE_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
+getMagazineKeywordListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_TITLE LIKE '%' || ? || '%' AND BOARD_CATEGORY=20
+selectMagazineKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO, BOARD_TITLE, COUNT, CREATE_DATE, MODIFY_DATE, STATUS FROM BOARD WHERE BOARD_TITLE LIKE ? AND BOARD_CATEGORY=20 ORDER BY CREATE_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
 
-#event
+#event(30)
 insertEvent=INSERT INTO BOARD(BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, STATUS) VALUES(SEQ_BNO.NEXTVAL,30,?,?,DEFAULT,SYSDATE,SYSDATE,DEFAULT)
 insertEventAttachemnt=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_BNO.CURRVAL, ?,?,?,SYSDATE,1,DEFAULT,30)
 getEventListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=30
 selectEventList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO,BOARD_CATEGORY,BOARD_TITLE,BOARD_CONTENT,COUNT,CREATE_DATE,MODIFY_DATE,B.STATUS,CHANGE_NAME FROM BOARD B JOIN ATTACHMENT ON(BOARD_NO=REF_BNO) WHERE BOARD_CATEGORY=30 AND BOARD_LEVEL=30 AND FILE_LEVEL=1 AND B.STATUS='Y' ORDER BY BOARD_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 selectEventThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT FILE_NO, REF_BNO, ORIGIN_NAME, CHANGE_NAME, FILE_PATH, UPLOAD_DATE, FILE_LEVEL, STATUS, BOARD_LEVEL FROM ATTACHMENT WHERE BOARD_LEVEL=30 ORDER BY REF_BNO DESC) A) WHERE RNUM BETWEEN ? AND ?
 insertEventNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?, ?, ?, ?, SYSDATE,1,DEFAULT,30)
-
+getEventKeywordListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_TITLE LIKE '%' || ? || '%' AND BOARD_CATEGORY=30
+eventKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO, BOARD_TITLE, COUNT, CREATE_DATE, MODIFY_DATE, STATUS FROM BOARD WHERE BOARD_TITLE LIKE ? AND BOARD_CATEGORY=30 ORDER BY CREATE_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
