--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -35,13 +35,13 @@ selectMember=SELECT * FROM MEMBER WHERE USER_ID=?
 idCheck=SELECT COUNT(*) FROM MEMBER WHERE USER_ID=?
 emailCheck=SELECT COUNT(*) FROM MEMBER WHERE EMAIL=?
 idfindCheck=SELECT USER_ID FROM MEMBER WHERE EMAIL=?
+selectUserPwd=SELECT USER_PWD,EMAIL FROM MEMBER WHERE USER_ID=?
+
 insertGrade=INSERT INTO MEM_GRADE VALUES(SEQ_GNO.NEXTVAL,?,?,?)
 updateMemberGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT BETWEEN (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?) AND (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?)
 updateMemberMaxGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT >=(SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?)
 updateGrade=UPDATE MEM_GRADE SET GRADE_NAME=?, MIN_ACOUNT=?, GRADE_RATE=? WHERE GRADE_CODE =?
 newUpdateMemberGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT NOT BETWEEN (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?) AND (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?) AND GRADE_CODE=?
-newUpdateMaxMemberGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT < (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?) AND GRADE_CODE=?
-
 
 selectWishList=SELECT PCODE, PNAME, PRICE, KIND, CHANGE_NAME FROM PRODUCT JOIN WISH_LIST USING (PCODE) JOIN ATTACHMENT A ON(PCODE=REF_BNO) WHERE BOARD_LEVEL=80 AND FILE_LEVEL=1 AND USER_NO=? ORDER BY WISH_DATE DESC
 insertWishList=INSERT INTO WISH_LIST VALUES(?,?,SYSDATE)
@@ -54,3 +54,4 @@ getPointListCount=select COUNT(*)FROM MEMBER JOIN POINT USING (USER_NO) WHERE US
 
 # 1to1 admin
 selectMtmAdminCount=select COUNT(*) FROM MEN_TO_MEN 
+selectMtmAdminList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (select MTM_NO,MTM_TYPE,MTM_title,CREATE_DATE,MTM_NAME  FROM MEN_TO_MEN M  JOIN MTM_TYPE T ON (MTM_TYPE_NO=MTM_TYPE)ORDER BY CREATE_DATE DESC)A)WHERE RNUM BETWEEN ? AND ?
