Space_payment.jsp_(수정)_준호
드디어 가격을 찍었다 대광신

--- a/teaspoonProject/src/sql/space/space-query.properties
+++ b/teaspoonProject/src/sql/space/space-query.properties
@@ -2,7 +2,7 @@
 insertSpace=INSERT INTO RESERVATION VALUES(SEQ_RESERVNO.NEXTVAL, ?, SYSDATE, ?, ?, ?, ?, ?, DEFAULT, ?, ?)
 
 #paymentSelect
-selectPaymentList=SELECT GOODS_PAY, TOTAL, RESERV_PAY, USER_NO, RESERV_DATE, RESERV_TIME, GOODS FROM RESERV_PAYMENT P, RESERVATION R WHERE P.RESERV_NO = R.RESERV_NO
+
 
 #goodsSelect
-selectGoodsList=SELECT * FROM GOODS WHERE GS_NO=?
+selectGoodsList=SELECT * FROM GOODS 
