--- a/teaspoonProject/src/sql/board/board-query.properties
+++ b/teaspoonProject/src/sql/board/board-query.properties
@@ -24,3 +24,15 @@ selectEventThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT FIL
 insertEventNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?, ?, ?, ?, SYSDATE,1,DEFAULT,30)
 getEventKeywordListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_TITLE LIKE '%' || ? || '%' AND BOARD_CATEGORY=30
 eventKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO, BOARD_TITLE, COUNT, CREATE_DATE, MODIFY_DATE, STATUS FROM BOARD WHERE BOARD_TITLE LIKE ? AND BOARD_CATEGORY=30 ORDER BY CREATE_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
+
+
+#notice(40)
+insertNotice=INSERT INTO BOARD(BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, STATUS) VALUES(SEQ_BNO.NEXTVAL,40,?,?,DEFAULT,SYSDATE,SYSDATE,DEFAULT)
+insertNoticeAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, SEQ_BNO.CURRVAL, ?,?,?,SYSDATE,1,DEFAULT,40)
+getNoticeListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_CATEGORY=40
+selectNoticeList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO,BOARD_CATEGORY,BOARD_TITLE,BOARD_CONTENT,COUNT,CREATE_DATE,MODIFY_DATE,B.STATUS,CHANGE_NAME FROM BOARD B JOIN ATTACHMENT ON(BOARD_NO=REF_BNO) WHERE BOARD_CATEGORY=40 AND BOARD_LEVEL=40 AND FILE_LEVEL=1 AND B.STATUS='Y' ORDER BY BOARD_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
+selectNoticeThumbnailList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT FILE_NO, REF_BNO, ORIGIN_NAME, CHANGE_NAME, FILE_PATH, UPLOAD_DATE, FILE_LEVEL, STATUS, BOARD_LEVEL FROM ATTACHMENT WHERE BOARD_LEVEL=40 ORDER BY REF_BNO DESC) A) WHERE RNUM BETWEEN ? AND ?
+insertNoticeNewAttachment=INSERT INTO ATTACHMENT VALUES(SEQ_FNO.NEXTVAL, ?, ?, ?, ?, SYSDATE,1,DEFAULT,40)
+getNoticeKeywordListCount=SELECT COUNT(*) FROM BOARD WHERE BOARD_TITLE LIKE '%' || ? || '%' AND BOARD_CATEGORY=40
+noticeKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT BOARD_NO, BOARD_TITLE, COUNT, CREATE_DATE, MODIFY_DATE, STATUS FROM BOARD WHERE BOARD_TITLE LIKE ? AND BOARD_CATEGORY=40 ORDER BY CREATE_DATE DESC) A) WHERE RNUM BETWEEN ? AND ?
+
