--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -36,6 +36,7 @@ idCheck=SELECT COUNT(*) FROM MEMBER WHERE USER_ID=?
 emailCheck=SELECT COUNT(*) FROM MEMBER WHERE EMAIL=?
 idfindCheck=SELECT USER_ID FROM MEMBER WHERE EMAIL=?
 selectUserPwd=SELECT USER_PWD,EMAIL FROM MEMBER WHERE USER_ID=?
+selectUserId=SELECT USER_ID FROM MEMBER WHERE EMAIL=?
 
 insertGrade=INSERT INTO MEM_GRADE VALUES(SEQ_GNO.NEXTVAL,?,?,?)
 updateMemberGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT BETWEEN (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?) AND (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?)
