관리자-리뷰_키워드검색추가_하정
placeholder부분 전부 수정함

--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -39,4 +39,9 @@ selectProductReviewList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT REVI
 deleteReview=DELETE FROM REVIEW WHERE REVIEW_NO=?
 deleteProduct=UPDATE PRODUCT SET STATUS='N' WHERE PCODE=?
 
+#keyword
+getProductKeywordListCount=SELECT COUNT(*) FROM PRODUCT WHERE PNAME LIKE '%' || ? || '%'
+selectProductKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT PCODE, PNAME, SUP_PRICE, PRICE, STOCK, STATUS, KEYWORD, TOTAL_COUNT, KIND, PCONTENT FROM PRODUCT WHERE PNAME LIKE ? ORDER BY PCODE DESC) A) WHERE RNUM BETWEEN ? AND ?
+getReviewKeywordListCount=SELECT COUNT(*) FROM REVIEW JOIN MEMBER USING (USER_NO) WHERE USER_ID LIKE '%' || ? || '%'
+selectReviewKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT REVIEW_NO, PNAME, USER_ID, CREATE_DATE, CONTENT FROM REVIEW JOIN MEMBER USING (USER_NO) JOIN PRODUCT USING (PCODE) WHERE USER_ID LIKE ? ORDER BY REVIEW_NO DESC) A) WHERE RNUM BETWEEN ? AND ?
 
