--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -39,6 +39,8 @@ selectUserPwd=SELECT USER_PWD,EMAIL FROM MEMBER WHERE USER_ID=?
 selectUserId=SELECT USER_ID FROM MEMBER WHERE EMAIL=?
 
 insertGrade=INSERT INTO MEM_GRADE VALUES(SEQ_GNO.NEXTVAL,?,?,?)
+deleteGrade=DELETE FROM MEM_GRADE WHERE GRADE_CODE=?
+memberGradeDown=UPDATE MEMBER SET GRADE_CODE=? WHERE GRADE_CODE=?
 updateMemberGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT BETWEEN (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?) AND (SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?)
 updateMemberMaxGrade=UPDATE MEMBER SET GRADE_CODE=? WHERE BUY_POINT >=(SELECT MIN_ACOUNT FROM MEM_GRADE WHERE GRADE_NAME= ?)
 updateGrade=UPDATE MEM_GRADE SET GRADE_NAME=?, MIN_ACOUNT=?, GRADE_RATE=? WHERE GRADE_CODE =?
