--- a/teaspoonProject/src/sql/board/board-query.properties
+++ b/teaspoonProject/src/sql/board/board-query.properties
@@ -4,6 +4,7 @@ updateBoard=UPDATE BOARD SET BOARD_TITLE = ?, BOARD_CONTENT = ?, MODIFY_DATE = S
 selectAttachment=SELECT * FROM ATTACHMENT WHERE REF_BNO=?
 updateAttachment=UPDATE ATTACHMENT SET CHANGE_NAME=?, ORIGIN_NAME=?, FILE_PATH=1 WHERE FILE_NO=?
 deleteBoard=UPDATE BOARD SET STATUS='N' WHERE BOARD_NO=?	
+increaseCount=UPDATE BOARD SET COUNT=COUNT+1 WHERE BOARD_NO=? AND STATUS='Y'
 
 #magazine(20)
 insertMagazine=INSERT INTO BOARD(BOARD_NO, BOARD_CATEGORY, BOARD_TITLE, BOARD_CONTENT, COUNT, CREATE_DATE, MODIFY_DATE, STATUS) VALUES(SEQ_BNO.NEXTVAL,20,?,?,DEFAULT,SYSDATE,SYSDATE,DEFAULT)
