--- a/teaspoonProject/src/sql/member/member-query.properties
+++ b/teaspoonProject/src/sql/member/member-query.properties
@@ -59,3 +59,4 @@ selectMtmAdminCount=select COUNT(*) FROM MEN_TO_MEN
 selectMtmAdminList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (select MTM_NO,MTM_TYPE,MTM_title,CREATE_DATE,MTM_NAME  FROM MEN_TO_MEN M  JOIN MTM_TYPE T ON (MTM_TYPE_NO=MTM_TYPE)ORDER BY CREATE_DATE DESC)A)WHERE RNUM BETWEEN ? AND ?
 selectMtmAdminListType=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT MTM_NO,MTM_TYPE,MTM_TITLE,CREATE_DATE,MTM_NAME FROM MEN_TO_MEN JOIN MTM_TYPE ON (MTM_TYPE=MTM_TYPE_NO)WHERE MTM_NAME = ? ORDER BY MTM_TYPE DESC)A) WHERE RNUM BETWEEN ? AND ?
 selectMtmAdminCount=SELECT COUNT(*) FROM MEN_TO_MEN JOIN MTM_TYPE ON (MTM_TYPE_NO=MTM_TYPE) WHERE MTM_NAME = ?
+mtmQnaAnswer=SELECT MTM_NO,MTM_NAME,MTM_TITLE,MTM_CONTENT,CREATE_DATE,USER_NAME,USER_ID FROM MEN_TO_MEN JOIN MEMBER USING (USER_NO) JOIN MTM_TYPE ON(MTM_TYPE_NO = MTM_TYPE)WHERE MTM_NO = ?
