--- a/teaspoonProject/src/sql/store/product-query.properties
+++ b/teaspoonProject/src/sql/store/product-query.properties
@@ -48,4 +48,4 @@ selectReviewKeywordList=SELECT * FROM (SELECT ROWNUM RNUM, A.* FROM (SELECT REVI
 #optiop
 selectOptionCode=SELECT OPTION_CODE FROM OPTION_CODE WHERE OPTION_TYPE1 = ? AND OPTION_TYPE2=?
 insertPdetailNo=INSERT INTO PRODUCT_DETAIL VALUES(SEQ_PDETAIL.NEXTVAL, ?, ?)
-insertOrderBy=INSERT INTO ORDER_BUY VALUES(?,?,?)
+insertOrderBy=INSERT INTO ORDER_BUY VALUES(?,(SELECT MAX(P_DETAIL_NO) FROM PRODUCT_DETAIL),?)
